Bug 64956 - Copy comment text to the page itself result in a white text color
Summary: Copy comment text to the page itself result in a white text color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.0.0.beta2 tar...
Keywords: regression
: 67042 81852 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-05-24 13:39 UTC by Jorendc
Modified: 2014-07-29 05:11 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2013-05-24 13:39:35 UTC
Thanks to Bug 64924 I can report this issue (in a separate report)

How to reproduce:
* Open writer
* Create a comment (Insert > Comment)
* Type some random text in the comment
* Select all text in the comment and copy it
* Paste it in the document itself

Result: white pasted text

You have to manually change the font color to another color. I think I don't have to explain this but: quite annoying because the most common page background color is white :-).

Kind regards,
Joren
Comment 1 Jorendc 2013-05-24 13:40:35 UTC
See initial Bug report (bug 64924). I can confirm reporters behavior, so I can mark this bug as NEW.
Comment 2 tommy27 2013-07-19 08:47:07 UTC
*** Bug 67042 has been marked as a duplicate of this bug. ***
Comment 3 tommy27 2013-07-19 11:16:48 UTC
adding regression keyword. it worked in 3.6.6.2

https://bugs.freedesktop.org/show_bug.cgi?id=67042#c3
Comment 4 Michael Stahl 2013-07-29 11:48:55 UTC
was introduced by switching to writerfilter for copy/paste:

commit ed654c4aa7f9f10fcb16127349009bc0c38b12e8
Author:     Miklos Vajna <vmiklos@suse.cz>
AuthorDate: Fri Nov 30 17:37:08 2012 +0100

    Revert "fdo#43869 use the old rtf importer for paste"
Comment 5 Jorendc 2013-10-15 18:19:47 UTC
Still reproducible using Windows 8 with Version: 4.2.0.0.alpha0+
Build ID: 3de7c7b5854335a82948560b3cc5b302171e340f
TinderBox: Windows-x86@47-TDF, Branch:master, Time: 2013-10-15_13:31:21

Kind regards,
Joren
Comment 6 Michael Kleidt 2014-05-07 07:29:38 UTC
Still reproducible using Windows XP and LO 4.2.0.4.
Comment 7 tommy27 2014-05-07 07:38:47 UTC
and 4.2.2.3 as well under Win7x64.
has it ever worked in LibO 3.x era?
Comment 8 tommy27 2014-05-07 07:40:18 UTC
oopss... didn't saw that comment.

(In reply to comment #4)
> was introduced by switching to writerfilter for copy/paste:
> 
> commit ed654c4aa7f9f10fcb16127349009bc0c38b12e8
> Author:     Miklos Vajna <vmiklos@suse.cz>
> AuthorDate: Fri Nov 30 17:37:08 2012 +0100
> 
>     Revert "fdo#43869 use the old rtf importer for paste"
Comment 9 Michael Stahl 2014-05-30 22:45:10 UTC
turns out the bug is actually in the editengine RTF export.

fixed on master
Comment 10 Commit Notification 2014-05-30 22:46:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55070972b32e719e4855855797263d6342a3625f

fdo#64956: editeng: fix RTF color table export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2014-05-30 22:50:53 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d482c8218f23f95dc2d94cbe2fad78365db16f7f&h=libreoffice-4-3

fdo#64956: editeng: fix RTF color table export


It will be available in LibreOffice 4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2014-05-31 11:44:04 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=edfd206f65afb9afb5b0e9842453ba0cc085a0b5&h=libreoffice-4-2

fdo#64956: editeng: fix RTF color table export


It will be available in LibreOffice 4.2.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2014-06-03 08:51:02 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=029b24297ade84b6bf72ce1dec37d9ca9ac4b740&h=libreoffice-4-2-5

fdo#64956: editeng: fix RTF color table export


It will be available already in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 ign_christian 2014-07-29 05:11:12 UTC
*** Bug 81852 has been marked as a duplicate of this bug. ***