fdo#64956: editeng: fix RTF color table export

The editengine RTF export produces this:
{\colortbl\red255\green255\blue255;;}

... and then it proceeds to map COL_AUTO to \cf0 i.e. the "white" entry
that is the result of erroneously writing out the 0th entry regardless
of whether it is COL_AUTO or not.

Fix the color table export to always put COL_AUTO first (as the Writer
RTF export already does), and simplify the code a bit.

Change-Id: Ia8ce19f387e3627a1b4a26bcc723edcf5b1ffdf8